feat: more restful methods
