# product-api/swagger.yaml
@@ -33,11 +33,23 @@ info:
 paths:
   /products:
     get:
-      description: Returns a list of products
+      description: Returns a list of products from the database
       operationId: listProducts
       responses:
         "200":
           $ref: '#/responses/productsResponse'
+      tags:
+      - products
+    post:
+      description: Create a new product
+      operationId: createProduct
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
+        "501":
+          $ref: '#/responses/errorResponse'
       tags:
       - products
   /products/{id}:
@@ -55,13 +67,47 @@ paths:
       responses:
         "201":
           $ref: '#/responses/noContent'
+        "422":
+          $ref: '#/responses/errorValidation'
+        "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    get:
+      description: Return a list of products from the database
+      operationId: listSingle
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    put:
+      description: Update a product
+      operationId: updateProduct
+      responses:
+        "201":
+          $ref: '#/responses/noContent'
+        "422":
+          $ref: '#/responses/errorValidation'
+        "501":
+          $ref: '#/responses/errorResponse'
       tags:
       - products
 produces:
 - application/json
 responses:
+  errorResponse:
+    description: ""
+  errorValidation:
+    description: ""
   noContent:
     description: ""
+  productResponse:
+    description: ""
+    schema:
+      $ref: '#/definitions/Product'
   productsResponse:
     description: A list of products returns in the response
     schema:
